[gd_scene load_steps=3 format=3 uid="uid://dmpi2gavmgakq"]

[ext_resource type="Script" path="res://scripts/ui/avatar_creator.gd" id="1_d88xq"]
[ext_resource type="Theme" uid="uid://theme_main" path="res://theme/main_theme.tres" id="2_theme"]

[node name="AvatarCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_d88xq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.117647, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "‚ú® Creador de Avatares"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentHBox" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="FormContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="NombreContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/NombreContainer"]
layout_mode = 2
text = "Nombre del Personaje:"

[node name="NombreInput" type="LineEdit" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/NombreContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Ej: Aria la Valiente"
max_length = 30

[node name="DescripcionContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/DescripcionContainer"]
layout_mode = 2
text = "Descripci√≥n (opcional):"

[node name="DescripcionInput" type="TextEdit" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/DescripcionContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Una breve historia de tu personaje..."
wrap_mode = 1

[node name="ImagenContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/ImagenContainer"]
layout_mode = 2
text = "Imagen de Avatar:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/ImagenContainer"]
layout_mode = 2

[node name="ImagenOption" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/ImagenContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadFileButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/ImagenContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "üìÅ Cargar..."

[node name="AttributesContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RazaContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/AttributesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/AttributesContainer/RazaContainer"]
layout_mode = 2
text = "Raza:"

[node name="RazaOption" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/AttributesContainer/RazaContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="SexoContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/AttributesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/AttributesContainer/SexoContainer"]
layout_mode = 2
text = "Sexo:"

[node name="SexoOption" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/FormContainer/AttributesContainer/SexoContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PreviewContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PreviewLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/PreviewContainer"]
layout_mode = 2
text = "Vista Previa:"
horizontal_alignment = 1

[node name="PreviewPanel" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/PreviewContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="PreviewTexture" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentHBox/PreviewContainer/PreviewPanel"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="SaveButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.314, 0.784, 0.471, 1)
theme_override_font_sizes/font_size = 18
text = "üíæ Guardar"

[node name="LoadButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üìÇ Cargar"

[node name="RandomButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üé≤ Aleatorio"

[node name="BackButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.91, 0.3, 0.24, 1)
theme_override_font_sizes/font_size = 18
text = "¬´ Volver"
